[package]
name = "count-tys"
version = "0.1.0"
authors = ["Dmitrii - Demenev <demenev.dmitriy1@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.17"
quote = "1.0.3"
proc-macro2 = "1.0.10"
proc-macro-hack = "0.5.15"
tys-counting-fsm-for-ty-tt-cluster-seq = {path="./dependencies/tys-counting-fsm-for-ty-tt-cluster-seq"}

[lib]
proc-macro = true